# rapl_stopwatch

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  rapl_stopwatch.c  rapl_stopwatch.h  test.c
include/: rapl_stopwatch.h
src/: rapl_stopwatch.c
test/: CMakeLists.txt  test_sleep1.c  test_sleep40.c
